# brunOS

./: .env.example  .gitignore  CLAUDE.md  CLAUDE.template.md  README.md  pyproject.toml  requirements.txt  setup.sh
.agent/plans/: baas-track-c-org-onboarding.md  brunos-federation-current-state.md  brunos-federation-parity-prd.md  company-persona-skills.md  diagnosis-brunos-2026-06-07.md  engine-instance-extraction.md  inbox-clearing-watermark-bug.md  linos-federation-write-side.md  memory-search-skill.md  phase-0-foundation-prep.md  phase-2-hooks.md  phase-3-memory-search.md  phase-5-skills.md  (+8 more)
.claude/: .env.example  settings.json
deploy/: README.md
docs/: baas_architecture.excalidraw
eval/: README.md  eval.py  queries.jsonl
tests/: test_block_secrets_example_carveout.py  test_chat_channel_registry.py  test_chat_linos_profile.py  test_code_sync.py  test_comms_capture.py  test_compaction_floor.py  test_company_brain_reflect.py  test_decision_loop.py  test_dream.py  test_federation_health.py  test_gap_analysis.py  test_gmail_feeder.py  test_graph_augment.py  test_graph_edges.py  test_inbox_slug_canonicalize.py  test_linos_consumer.py  test_memory_doctor.py  test_path_boundary.py  test_pending_buffer.py  test_privacy_gate.py  test_provision_healthchecks.py  test_reflect_clearing_watermark.py  test_reflect_eviction.py  test_reflect_inbox_batching.py  test_reflect_monitoring.py  test_retire_local_inbox.py  test_retire_vps_inbox.py  test_slackbot_watchdog.py  test_sync_acks.py  test_sync_cleared_inbox.py  test_sync_common_reporting.py  test_vault_sync.py
(+161 files in other folders)
